--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
+    "dotenv": "^10.0.0",
     "mongodb": "^3.6.9",
     "mongoose": "^5.12.14",
     "next": "^10.0.0",
