--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.0.1",
     "mongoose": "^5.12.14",
     "next": "^10.0.0",
+    "next-share": "^0.7.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
